# itmo-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: corpus_100k_multilingual.yaml  default.yaml  secrets.local.yaml.example
context/: plan.md  specification.md  task.md
results/embeddings/abstract/: bert.meta.json  bge-m3.meta.json  doc2vec.meta.json  e5.meta.json  fasttext.meta.json  gte.meta.json  manifest.json  sbert.meta.json  tfidf.meta.json
results/embeddings/abstract_subset/: bert.meta.json  bge-m3.meta.json  doc2vec.meta.json  e5.meta.json  fasttext.meta.json  gte.meta.json  manifest.json  sbert.meta.json  tfidf.meta.json
results/embeddings/full_text/: bert.meta.json  bge-m3.meta.json  doc2vec.meta.json  e5.meta.json  fasttext.meta.json  gte.meta.json  manifest.json  sbert.meta.json  tfidf.meta.json
results/reports/: corpus_stats.json  semantic_analysis.md  Отчёт_текущее_состояние.md
results/reports/abstract/: semantic_analysis.json  semantic_analysis.md
results/runs/: index.json  latest
results/runs/20260626_235659/: README.md  manifest.json
results/runs/20260627_050356/: README.md  manifest.json
results/runs/20260627_142823/: README.md  manifest.json
scripts/: run_100k_multilingual.sh  run_100k_multilingual_windows.sh
src/textvec/: __init__.py  cli.py  config.py  run_registry.py  utils.py
src/textvec/analysis/: __init__.py  reduce.py  semantic.py  stats.py  visualize.py
tests/: test_cleaning.py  test_config_secrets.py  test_device.py  test_multilingual.py  test_pipeline_smoke.py  test_pubmed_loader.py
(+37 files in other folders)
